--- a/mArray.cls
+++ b/mArray.cls
@@ -898,8 +898,11 @@ Else
 itemnumeric = 0
 End If
 Else
-
+If VarType(actualdata(curitem)) = 8 Then
+itemnumeric = val(actualdata(curitem))
+Else
 itemnumeric = actualdata(curitem)
+End If
 End If
 Exit Property
 Else
